{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 20,
  "lineage": "28e50479-3e75-3416-a45a-f4ab6e685c74",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fbd2e1ec2bc4c70",
            "arn": "arn:aws:ec2:us-east-1:522814698925:elastic-ip/eipalloc-08fbd2e1ec2bc4c70",
            "association_id": "eipassoc-06dafa141c1197ef9",
            "domain": "vpc",
            "id": "eipalloc-08fbd2e1ec2bc4c70",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b1d33489cade7cf1",
            "private_dns": "ip-10-0-1-117.ec2.internal",
            "private_ip": "10.0.1.117",
            "public_dns": "ec2-44-206-38-10.compute-1.amazonaws.com",
            "public_ip": "44.206.38.10",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Grey-NAT-EIP"
            },
            "tags_all": {
              "Name": "Grey-NAT-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522814698925:internet-gateway/igw-0e17f765a3a3288c2",
            "id": "igw-0e17f765a3a3288c2",
            "owner_id": "522814698925",
            "tags": {
              "Name": "Grey-IGW"
            },
            "tags_all": {
              "Name": "Grey-IGW"
            },
            "vpc_id": "vpc-02e46df7df0b40433"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fbd2e1ec2bc4c70",
            "association_id": "eipassoc-06dafa141c1197ef9",
            "connectivity_type": "public",
            "id": "nat-008a0c66616f8836d",
            "network_interface_id": "eni-0b1d33489cade7cf1",
            "private_ip": "10.0.1.117",
            "public_ip": "44.206.38.10",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07f2856bac440c10e",
            "tags": {
              "Name": "Grey-nat-gateway"
            },
            "tags_all": {
              "Name": "Grey-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a9b5b594d99360fb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-008a0c66616f8836d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a9b5b594d99360fb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e17f765a3a3288c2",
            "id": "r-rtb-02184bc611d279c4a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02184bc611d279c4a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522814698925:route-table/rtb-0a9b5b594d99360fb",
            "id": "rtb-0a9b5b594d99360fb",
            "owner_id": "522814698925",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-008a0c66616f8836d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Grey-Private-RT"
            },
            "tags_all": {
              "Name": "Grey-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e46df7df0b40433"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522814698925:route-table/rtb-02184bc611d279c4a",
            "id": "rtb-02184bc611d279c4a",
            "owner_id": "522814698925",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e17f765a3a3288c2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Grey-Public-RT"
            },
            "tags_all": {
              "Name": "Grey-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e46df7df0b40433"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0552309a5be7b7e0a",
            "route_table_id": "rtb-0a9b5b594d99360fb",
            "subnet_id": "subnet-04ba1bd395179ce99"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1295c80b543f7e9",
            "route_table_id": "rtb-02184bc611d279c4a",
            "subnet_id": "subnet-07f2856bac440c10e"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522814698925:subnet/subnet-04ba1bd395179ce99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ba1bd395179ce99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522814698925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Grey-private-subnet-1"
            },
            "tags_all": {
              "Name": "Grey-private-subnet-1"
            },
            "vpc_id": "vpc-02e46df7df0b40433"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522814698925:subnet/subnet-07f2856bac440c10e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f2856bac440c10e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "522814698925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Grey-public-subnet"
            },
            "tags_all": {
              "Name": "Grey-public-subnet"
            },
            "vpc_id": "vpc-02e46df7df0b40433"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522814698925:vpc/vpc-02e46df7df0b40433",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f81ffb5a807165d4",
            "default_route_table_id": "rtb-080ead1807459129e",
            "default_security_group_id": "sg-0f08d53673b64af1a",
            "dhcp_options_id": "dopt-07131c8cc98bb6350",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02e46df7df0b40433",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-080ead1807459129e",
            "owner_id": "522814698925",
            "tags": {
              "Name": "Grey-VPC"
            },
            "tags_all": {
              "Name": "Grey-VPC"
            }
          }
        }
      ]
    }
  ]
}